--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import 'lib/css/vuetify.css';
 @import 'lib/css/mdi.css';
 
+hr {
+    margin-top: 7px !important;
+    margin-bottom: 7px !important;
+    opacity: 0.15;
+}
+
 html {
     overflow: hidden;
 }
@@ -23,9 +29,50 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(90, 90, 90);
+    background: rgba(90, 90, 90, 0.1);
 }
 
 ::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.network-list {
+    overflow-y: scroll !important;
+    height: calc(100vh - 259px) !important;
+    min-height: calc(100vh - 259px) !important;
+}
+
+.connected-network {
+    height: 135px !important;
+    min-height: 135px !important;
+}
+
+.connected-network * {
+    line-height: 75% !important;
+    font-size: 93% !important;
+}
+
+.wifi-list-item {
+    padding-right: 0;
+    font-size: 70% !important;
+    border-left: 1px solid #f5f5f536;
+    border-bottom: 1px solid #f5f5f536;
+}
+
+.wifi-list-item .v-list-item__action {
+    padding: 3px !important;
+    margin: 5px !important;
+}
+
+.wifi-list-item .v-list-item__content b,
+.wifi-list-item .v-list-item__content .v-icon {
+    font-size: 99% !important;
+}
+
+.v-card {
+    background-color: #1e1e1e47 !important;
+}
+
+.v-card .v-list {
+    background-color: transparent !important;
 }
