--- a/style.css
+++ b/style.css
@@ -29,22 +29,22 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(90, 90, 90, 0.1);
+    background: rgba(90, 90, 90, 0);
 }
 
 ::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0);
 }
 
-.network-list {
+.network-list .v-list {
     overflow-y: scroll !important;
-    height: calc(100vh - 259px) !important;
-    min-height: calc(100vh - 259px) !important;
+    height: calc(100vh - 267px) !important;
+    min-height: calc(100vh - 267px) !important;
 }
 
 .connected-network {
-    height: 135px !important;
-    min-height: 135px !important;
+    height: 125px !important;
+    min-height: 125px !important;
 }
 
 .connected-network * {
@@ -55,8 +55,8 @@ html {
 .wifi-list-item {
     padding-right: 0;
     font-size: 80% !important;
-    border-left: 1px solid #f5f5f536;
-    border-bottom: 1px solid #f5f5f536;
+    border-left: 1px solid #151414;
+    border-bottom: 1px solid #151414;
 }
 
 .wifi-list-item .v-list-item__action {
@@ -75,4 +75,13 @@ html {
 
 .v-card .v-list {
     background-color: transparent !important;
+}
+
+.theme--dark.v-sheet--outlined {
+    border: thin solid #151414 !important;
+}
+
+
+.v-messages, .v-text-field__details {
+    display: none !important;
 }
