--- a/style.css
+++ b/style.css
@@ -38,18 +38,25 @@ html {
 
 .network-list .v-list {
     overflow-y: scroll !important;
-    height: calc(100vh - 267px) !important;
-    min-height: calc(100vh - 267px) !important;
+    height: calc(100vh - 285px) !important;
+    min-height: calc(100vh - 285px) !important;
+    padding-right: 0 !important;
+    width: 103% !important;
+    background-color: transparent !important;
 }
 
 .connected-network {
-    height: 125px !important;
-    min-height: 125px !important;
+    height: 140px !important;
+    min-height: unset !important;
 }
 
 .connected-network * {
     line-height: 75% !important;
-    font-size: 93% !important;
+    font-size: 95% !important;
+}
+
+.connected-network button * {
+    font-size: 85% !important;
 }
 
 .wifi-list-item {
@@ -62,6 +69,7 @@ html {
 .wifi-list-item .v-list-item__action {
     padding: 3px !important;
     margin: 5px !important;
+    margin-right: 0 !important;
 }
 
 .wifi-list-item .v-list-item__content b,
@@ -73,15 +81,20 @@ html {
     background-color: #1e1e1e47 !important;
 }
 
-.v-card .v-list {
-    background-color: transparent !important;
-}
-
 .theme--dark.v-sheet--outlined {
     border: thin solid #151414 !important;
 }
 
-
 .v-messages, .v-text-field__details {
     display: none !important;
+}
+
+.wifi-interfaces {
+    height: 77px !important;
+    min-height: unset !important;
+}
+
+#interfaceStatusField {
+    font-size: 85% !important;
+    border-right: 1px solid #f5f5f587 !important;
 }
